fix: resize logo on mobile

--- a/src/modules/Common/components/Logo.module.css
+++ b/src/modules/Common/components/Logo.module.css
@@ -4,3 +4,13 @@
     height: 37px;
   }
 }
+
+@media (--mobileLarge) {
+  .logo {
+    margin-top: 8px;
+    & svg {
+      width: 200px;
+      height: 27px;
+    }
+  }
+}
